--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,7 +1,6 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/auth.css">
-   
 </head>
 
 <body>
@@ -9,19 +8,23 @@
 
     <main>
         <% if (errorMessage) { %>
-        <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
-        <form class="login-form" action="/login" method="POST">
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+            <% } %>
+        <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="text" name="email" id="email">
+                <input type="email" name="email" id="email">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
+            <div class="form-control">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="confirmPassword" id="confirmPassword">
+            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">SignUp</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
